fix: JCFReadStatusRepository 수정